icondir = $(datadir)/icons/hicolor/scalable/apps
icon_DATA = totem.svg

tvicondir = $(datadir)/icons/hicolor/scalable/devices/
tvicon_DATA = totem-tv.svg

sidebaricondir = $(datadir)/icons/hicolor/scalable/actions/
sidebaricon_DATA = view-sidebar-symbolic.svg

EXTRA_DIST = $(icon_DATA) $(tvicon_DATA) $(sidebaricon_DATA)
